# cpp-api

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  database_init.sql  docker-compose.yml  nginx.conf
api/: CMakeLists.txt  Dockerfile  conanfile.txt
api/include/database/: database.hpp
api/include/models/: pearson.hpp  pessoa.hpp
api/include/repositories/: books_repository.hpp  people_repository.hpp  pessoas_repository.hpp
api/include/requests/: base_request_handler.hpp  books_requests_handler.hpp  books_router.hpp  people_requests_handler.hpp  people_router.hpp  pessoas_requests_handler.hpp  pessoas_router.hpp
api/src/: main.cpp
api/src/database/: database.cpp
api/src/models/: pearson.cpp  pessoa.cpp
api/src/repositories/: books_repository.cpp  people_repository.cpp  pessoas_repository.cpp
api/src/requests/: base_request_handler.cpp  books_requests_handler.cpp  books_router.cpp  people_requests_handler.cpp  people_router.cpp  pessoas_requests_handler.cpp  pessoas_router.cpp
database/: init.sql
include/: api_handlers.h
include/clients/: database_client.hpp  redis_client.hpp
include/database/: database.hpp
include/models/: book.hpp  pearson.hpp
include/repositories/: books_repository.hpp  people_repository.hpp
include/requests/: base_request_handler.hpp  books_requests_handler.hpp  books_router.hpp  people_requests_handler.hpp
src/: api_handlers.cpp  main.cpp
src/clients/: database_client.cpp  redis_client.cpp
src/models/: book.cpp
src/repositories/: books_repository.cpp  people_repository.cpp
src/requests/: base_request_handler.cpp  books_requests_handler.cpp  people_requests_handler.cpp  people_router.cpp
